--- a/tasklist/index.html
+++ b/tasklist/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="main.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title>Task List</title>
 </head>
@@ -20,6 +21,7 @@
                 <div class="input-field col s12">
                   <input type="text" name="task" id="task">
                   <label for="task">New Task</label>
+                  <span class="error"></span>
                 </div>
                 <input type="submit" value="Add Task" class="btn">
               </form>
